Update app icon and name to SettleX branding
- Updated launcher background with custom SettleX scales design
- Changed app name from 'ExpenseSettle' to 'SettleX' in strings.xml
- Used SettleX brand colors (#023c69, #0d5c96)
- Added professional scales symbol representing settlement
- Built successfully with Java 21 compatibility

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">ExpenseSettle</string>
-    <string name="title_activity_main">ExpenseSettle</string>
+    <string name="app_name">SettleX</string>
+    <string name="title_activity_main">SettleX</string>
     <string name="package_name">com.expensesettle.app</string>
     <string name="custom_url_scheme">com.expensesettle.app</string>
 </resources>
